feat(shooting strategies): rework bullets creation